[tool.poetry]
name = "dungeons and dragons"
version = "0.1.0"
description = ""
authors = ["mohmdfo <mohammad.fotouhi80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
